data/derived/comb/progs/unify/prog5122.ml.out
Characters 105-109:
  | h::t  -> if (k,d) = l then d else assoc (d,k,t::l);;
                                                 ^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'b * 'c
